tests/baselines/reference/computedPropertyNames5_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(3,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(3,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(4,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(4,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(5,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(5,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(6,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(6,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(7,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(7,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts(8,5): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames5_ES5.ts (12 errors) ====
    var b: boolean;
    var v = {
        [b]: 0,
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        [true]: 1,
        ~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        [[]]: 0,
        ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        [{}]: 0,
        ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        [undefined]: undefined,
        ~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        [null]: null
        ~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
    }